adicionado comentários ao código de chamada da api e os arquivos html e css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,31 @@
 </head>
 
 <body>
-    
+    <textarea name="" id="textoInicial" cols="30" rows="10"></textarea>
+
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" style="border: 1px solid">
+
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img data-title="avengers" src="./assets/img/bg/2-3.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img data-title="psycho" src="..." class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img data-title="pikomon" src="..." class="d-block w-100" alt="...">
+          </div>
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
 
     <!-- Optional JavaScript -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
