--- a/index.html
+++ b/index.html
@@ -13,43 +13,34 @@
 
     
     <!-- MY CSS -->
-    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/components.css">
+    <link rel="stylesheet" href="./assets/css/home.css">
 </head>
 
 <body>
-    <textarea name="" id="textoInicial" cols="30" rows="10"></textarea>
 
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" style="border: 1px solid">
+  <header></header>
 
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img data-title="avengers" src="./assets/img/bg/2-3.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img data-title="psycho" src="..." class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img data-title="pikomon" src="..." class="d-block w-100" alt="...">
-          </div>
-        </div>
+  <div id="content">
 
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+    <section id="intro" class="container"></section>
 
-    <!-- Optional JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="./assets/js/main.js"></script>
+    <section id="filmesMaisVistos"></section>
+
+    <section id="faq"></section>
+
+  </div>
+
+  <footer></footer>
+
+  <!-- Optional JavaScript -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="./assets/js/main.js"></script>
+  <script src="./assets/js/teste.js"></script>
 
 
-    <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+  <!-- Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
 
 </html>
