feito 40% do login.html

--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -21,11 +21,53 @@
 <body>
     
     <header>
+
         <nav>
             <a href="../../index.html">RESILIAFLIX</a>
         </nav>
 
     </header>
+
+    <div id="loginContent">
+
+        <main>
+
+            <h1>ENTRAR</h1>
+
+            <form action="" id="formLogin">
+
+                <div id="inputField">
+                    <label for="emailTelLogin">Email ou telefone</label>
+                    <input type="text" id="emailTelLogin" for="emailTelLogin" placeholder="Digite seu email ou telefone aqui">
+                </div>
+
+                <div id="inputField">
+                    <label for="senhaLogin">Senha:</label>
+                    <input type="text" id="senhaLogin" for="senhaLogin" placeholder="Digite sua senha aqui">
+                </div>
+
+                <button>Entrar</button>
+            </form>
+            
+            <a href="/">Esqueci minha senha</a>
+
+            <p>Não tem cadastro? Então clique <a href="/"> >> aqui << </a></p>
+
+        </main>
+
+    </div>
+
+    <footer>
+
+        <p>Duvidas? Ligue: 4002-8922</p>
+
+        <div>
+            <a href="/">Equipe</a>
+            <p>Fale conosco</p>
+            <p>Termos de uso</p>
+        </div>
+
+    </footer>
 
     <!-- Optional JavaScript -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
