feito o login e footer

--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -38,12 +38,12 @@
 
                 <div id="inputField">
                     <label for="emailTelLogin">Email ou telefone</label>
-                    <input type="text" id="emailTelLogin" for="emailTelLogin" placeholder="Digite seu email ou telefone aqui">
+                    <input type="email" id="emailTelLogin" for="emailTelLogin" placeholder="Digite seu email ou telefone aqui" required>
                 </div>
 
                 <div id="inputField">
                     <label for="senhaLogin">Senha:</label>
-                    <input type="text" id="senhaLogin" for="senhaLogin" placeholder="Digite sua senha aqui">
+                    <input type="text" id="senhaLogin" for="senhaLogin" placeholder="Digite sua senha aqui" required>
                 </div>
 
                 <button>Entrar</button>
@@ -51,7 +51,7 @@
             
             <a href="/">Esqueci minha senha</a>
 
-            <p>Não tem cadastro? Então clique <a href="/"> >> aqui << </a></p>
+            <p>Não tem cadastro? Então clique >> <a href="/">aqui</a> <<</p>
 
         </main>
 
@@ -61,11 +61,11 @@
 
         <p>Duvidas? Ligue: 4002-8922</p>
 
-        <div>
-            <a href="/">Equipe</a>
-            <p>Fale conosco</p>
-            <p>Termos de uso</p>
-        </div>
+        <ul>
+            <li><a href="/"><p>Equipe</p></a></li>
+            <li><p>Fale conosco</p></li>
+            <li><p>Termos de uso</p></li>
+        </ul>
 
     </footer>
 
