feito o @media para a página de login

--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -49,9 +49,9 @@
                 <button>Entrar</button>
             </form>
             
-            <a href="/">Esqueci minha senha</a>
+            <a href="./recuperarSenha.html">Esqueci minha senha</a>
 
-            <p>Não tem cadastro? Então clique >> <a href="/">aqui</a> <<</p>
+            <p>Não tem cadastro? Então clique <a href="./cadastrarUsuario.html">aqui</a>.</p>
 
         </main>
 
@@ -62,7 +62,7 @@
         <p>Duvidas? Ligue: 4002-8922</p>
 
         <ul>
-            <li><a href="/"><p>Equipe</p></a></li>
+            <li><a href="./equipe.html"><p>Equipe</p></a></li>
             <li><p>Fale conosco</p></li>
             <li><p>Termos de uso</p></li>
         </ul>
