--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
 
 <body>
 
-  <!-- <header>
+  <header>
     <nav>
       <a href="./index.html">RESILIAFLIX</a>
 
       <div>
         <div id="searchBtn" onclick="homeSearchBtn()">
           <img src="./assets/img/icon/lupaIcon.png" style="pointer-events: none;" alt="Lupa Icone .Imagem">
-        </div> -->
+        </div>
 
         <!-- <div id="loginBtn">
                     <a href="./assets/pages/login.html"><p>Entrar</p></a>
                 </div> -->
 
-        <!-- <button id="enterBtn" onclick="homeEnterBtn()">Entrar</button>
+        <button id="enterBtn" onclick="homeEnterBtn()">Entrar</button>
       </div>
     </nav>
 
-  </header> -->
+  </header>
 
-  <!-- <div id="content"> -->
+  <div id="content">
 
-    <!-- <section id="intro">
+    <section id="intro">
 
       <div>
         <h1>Filmes ruins para <br> pessoas com gosto duvidoso!</h1>
@@ -60,21 +60,38 @@
         </form>
       </div>
 
-    </section> -->
+    </section> 
 
     <section id="filmesMaisVistos">
 
       <!--Hyan-->
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" style="border: 1px solid">
 
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
+        </ol>
+
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class= foto data-title="velocipastor" src="./assets/img/bg/velocipastor.jpg" class="d-block w-100" alt="...">
-            <div>
-              <h1>title</h1>
-              <h2>Sinopse</h2>
+          <div id="carouselFilmes">
+            <div id="foto"><img  data-title="velocipastor" src="./assets/img/bg/velocipastor.jpg"  alt="..."></div>
+            <div id="filmeInfo">
+              <h2>title`${title}`</h2>
+              <h3>Sinopse</h3>
               <button type=submit>Click-me</button>
             </div>
+          </div>
           </div>
          
 
@@ -82,44 +99,44 @@
             <img class= foto data-title="cinederela" src="./assets/img/bg/Cinderela-Baiana.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img class= foto data-title="Death_Note" src="./assets/img/bg/death-note.jpg" class="d-block w-100" alt="...">
+            <img class= "foto" data-title="Death_Note" src="./assets/img/bg/death-note.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img class= foto data-title="pink_flamingos" src="./assets/img/bg/pink flamingos.jfif" class="d-block w-100" alt="...">
+            <img class= "foto" data-title="pink_flamingos" src="./assets/img/bg/pink flamingos.jfif" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img class= foto data-title="slenderMan" src="./assets/img/bg/slender-m,an.png" class="d-block w-100" alt="...">
+            <img class= "foto" data-title="slenderMan" src="./assets/img/bg/slender-m,an.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img class= foto data-title="centopeiaHumana" src="./assets/img/bg/centoeia humana.jpg" class="d-block w-100" alt="...">
+            <img class= "foto" data-title="centopeiaHumana" src="./assets/img/bg/centoeia humana.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img class= foto data-title="rubber" src="./assets/img/bg/pneu assassino.jfif" class="d-block w-100" alt="...">
+            <img class= "foto" data-title="rubber" src="./assets/img/bg/pneu assassino.jfif" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img class= foto data-title="malditasAranha" src="./assets/img/bg/Malditas-Aranhas.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img class= foto data-title="theEvil" src="./assets/img/bg/evil-dead.jpg" class="d-block w-100" alt="...">
+            <img class= "foto" data-title="theEvil" src="./assets/img/bg/evil-dead.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img class= foto data-title="teeth" src="./assets/img/bg/teethh.jpg" class="d-block w-100" alt="...">
+            <img class= "foto" data-title="teeth" src="./assets/img/bg/teethh.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img class= foto data-title="rosquinha" src="./assets/img/bg/rosquina assassina.jfif" class="d-block w-100" alt="...">
+            <img class= "foto" data-title="rosquinha" src="./assets/img/bg/rosquina assassina.jfif" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img class= foto data-title="sharnado" src="./assets/img/bg/sharknado.jpg" class="d-block w-100" alt="...">
+            <img class= "foto" data-title="sharnado" src="./assets/img/bg/sharknado.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img class= foto data-title="estaNoite" src="./assets/img/bg/Esta noite encarnerei no teu cadaver.jpg"
+            <img class= "foto" data-title="estaNoite" src="./assets/img/bg/Esta noite encarnerei no teu cadaver.jpg"
               class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img class= foto data-title="tremors" src="./assets/img/bg/Tremors.jpeg" class="d-block w-100" alt="...">
+            <img class= "foto" data-title="tremors" src="./assets/img/bg/Tremors.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img class= foto data-title="tomate" src="./assets/img/bg/tomate assassino.jfif" class="d-block w-100" alt="...">
+            <img class= "foto" data-title="tomate" src="./assets/img/bg/tomate assassino.jfif" class="d-block w-100" alt="...">
           </div>
         </div>
 
