70% do modal feito

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- MY CSS -->
     <link rel="stylesheet" href="./assets/css/components.css">
     <link rel="stylesheet" href="./assets/css/home.css">
+    <link rel="stylesheet" href="./assets/css/modal.css">
 </head>
 
 <body>
@@ -43,7 +44,7 @@
         <section id="intro">
 
             <div>
-                <h1>Filmes ruins para <br> pessoas com gosto duvidoso!</h1>
+                <h1 data-bs-toggle="modal" data-bs-target="#filmeModalHome">Filmes ruins para <br> pessoas com gosto duvidoso!</h1>
                 <p>Assista quando quiser e cancele a qualquer hora!</p>
 
                 <form id="formIntro">
@@ -67,6 +68,88 @@
     </div>
 
   <footer></footer>
+
+
+    <!-- MODAL -->
+    <div class="modal fade" id="filmeModalHome" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+        <div class="modal-dialog modal-lg">
+
+            <div class="modal-content">
+                <div class="modal-header">
+
+                    <div id="filmeTituloModal">
+                        <p>Vingadores: Endgame</p>
+                        <p>PG-13</p>
+                    </div>
+
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
+                </div>
+
+                <div class="modal-body">
+
+                    <div id="filmePosterModal">
+                        <img src="https://m.media-amazon.com/images/M/MV5BMTc5MDE2ODcwNV5BMl5BanBnXkFtZTgwMzI2NzQ2NzM@._V1_SX300.jpg" alt="Filme Poster">
+                    </div>
+
+                    <div id="filmeInfoModal">
+
+                        <div id="filmeNotaModal">
+
+                            <div>
+                                <p>IMDB</p>
+                                <p>8.4</p>
+                            </div>
+
+                            <div>
+                                <p>Metacritic</p>
+                                <p>78/100</p>
+                            </div>
+
+                            <div>
+                                <p>Rotten Tomatoes</p>
+                                <p>94%</p>
+                            </div>
+
+                        </div>
+
+                        <div id="filmeSinopseModal">
+                            <p>
+                                After the devastating events of Avengers: Infinity War (2018), the
+                                universe is in ruins. With the help of remaining allies, the Avengers 
+                                assemble once more in order to reverse Thanos' actions and restore 
+                                balance to the universe.
+                            </p>
+                        </div>
+
+                        <hr>
+
+                        <div id="outrosFilmeModal">
+
+                            <p>Gênero: Action, Adventure, Drama.</p>
+                            <p>Diretor: Anthony Russo, Joe Russo.</p>
+                            <p>Roteirista: Christopher Markus, Stephen McFeely, Stan Lee.</p>
+                            <p>Lançamento: 26 Apr 2019.</p>
+                            <p>Duração: 181 min.</p>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <!-- <div class="modal-footer">
+
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+
+                </div> -->
+            </div>
+
+        </div>
+
+    </div>
 
   <!-- Optional JavaScript -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
