--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!-- MODAL -->
     <div class="modal fade" id="filmeModalHome" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 
-        <div class="modal-dialog modal-lg">
+        <div class="modal-dialog">
 
             <div class="modal-content">
                 <div class="modal-header">
@@ -83,7 +83,7 @@
                         <p>PG-13</p>
                     </div>
 
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button"  data-bs-dismiss="modal" aria-label="Close">X</button>
 
                 </div>
 
