--- a/cadastro.html
+++ b/cadastro.html
@@ -1,48 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <title>ResiliaFlix</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- BOOTSTRAP CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/css/cadastrarUsuario.css">
+
+  <title>ResiliaFlix</title>
 </head>
+
 <body>
-    <h1>Cadastre-se!</h1>
-    <form>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Endereço de email</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo. com">
+  <form>
+  <div class="container">
+      <h1>Cadastre-se!</h1>
+      <div class="form-row">
+        <div class="form-group col-md-3">
+          <label for="inputName">Nome</label>
+          <input type="text" id="inputName" class="form-control" placeholder="Digite seu nome" required>
         </div>
-        <div class="form-group">
-          <label for="exampleFormControlSelect1">Select de exemplo</label>
-          <select class="form-control" id="exampleFormControlSelect1">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
+        <div class="form-group col-md-3">
+          <label for="inputSurname">Sobrenome</label>
+          <input type="text" class="form-control" id="inputSurname" placeholder="Digite seu sobrenome" required>
+        </div>
+        <div class="form-group col-md-3">
+          <label for="inputEmail4">Email</label>
+          <input type="email" class="form-control" id="inputEmail4" placeholder="nome@exemplo.com" required>
+        </div>
+        <div class="form-group col-md-3">
+          <label for="inputPassword4">Senha</label>
+          <input type="password" class="form-control" id="inputPassword4" placeholder="*********" required>
+        </div>
+        <div class="form-group col-md-3">
+          <label for="inputPassword4">Confirme sua senha</label>
+          <input type="password" class="form-control" id="inputPassword4" placeholder="*********" required>
+        </div>
+      </div>
+      <div class="form-group col-md-3">
+        <label for="inputZip">CEP:</label>
+        <input type="text" class="form-control" id="inputZip" required>
+      </div>
+      <div class="form-group col-md-3">
+        <label for="inputAddress2">Número:</label>
+        <input type="text" class="form-control" id="inputAddress">
+      </div>
+      <div class="form-group col-md-3">
+        <label for="inputAddress">Rua:</label>
+        <input type="text" class="form-control" id="inputAddress2" placeholder="Digite seu endereço..." required>
+      </div>
+      
+      <div class="form-group col-md-3">
+        <label for="inputAddress">Bairro:</label>
+        <input type="text" class="form-control" id="inputAddress3" required>
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-3">
+          <label for="inputCity">Cidade</label>
+          <input type="text" class="form-control" id="inputCity" required>
+        </div>
+        <div class="form-group col-md-3">
+          <label for="inputState">Estado</label>
+          <select id="inputState" class="form-control" required>
+            <option selected hidden>Escolha...</option>
+            <option value="AC">Acre</option>
+            <option value="AL">Alagoas</option>
+            <option value="AP">Amapá</option>
+            <option value="AM">Amazonas</option>
+            <option value="BA">Bahia</option>
+            <option value="CE">Ceará</option>
+            <option value="DF">Distrito Federal</option>
+            <option value="ES">Espírito Santo</option>
+            <option value="GO">Goiás</option>
+            <option value="MA">Maranhão</option>
+            <option value="MT">Mato Grosso</option>
+            <option value="MS">Mato Grosso do Sul</option>
+            <option value="MG">Minas Gerais</option>
+            <option value="PA">Pará</option>
+            <option value="PB">Paraíba</option>
+            <option value="PR">Paraná</option>
+            <option value="PE">Pernambuco</option>
+            <option value="PI">Piauí</option>
+            <option value="RJ">Rio de Janeiro</option>
+            <option value="RN">Rio Grande do Norte</option>
+            <option value="RS">Rio Grande do Sul</option>
+            <option value="RO">Rondônia</option>
+            <option value="RR">Roraima</option>
+            <option value="SC">Santa Catarina</option>
+            <option value="SP">São Paulo</option>
+            <option value="SE">Sergipe</option>
+            <option value="TO">Tocantins</option>
           </select>
         </div>
-        <div class="form-group">
-          <label for="exampleFormControlSelect2">Exemplo de select múltiplo</label>
-          <select multiple class="form-control" id="exampleFormControlSelect2">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlTextarea1">Exemplo de textarea</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-        </div>
-      </form>
-      <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+      </div>
+      <button type="submit" class="btn btn-primary">Enviar</button>
+    </div>
+  </form>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
   <script src="./assets/js/main.js"></script>
   <script src="./assets/js/teste.js"></script>
+  <!-- Optional JavaScript -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <!-- Bootstrap Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
