--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- MY CSS -->
     <link rel="stylesheet" href="./assets/css/components.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="stylesheet" href="./assets/css/home.css">
 </head>
 
@@ -68,34 +69,42 @@
 
     </div>
 
-    <footer>
-        <div id="contact-area"></div>
+    <footer class="py-4 footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="main-title">Gostou? Digite abaixo seu e-mail para iniciar ou renovar sua assinatura.</h3>
+                    <h4 class="footerTitle">Gostou? Digite abaixo seu email para iniciar ou renovar sua assinatura.</h4>
                 </div>
-                <div>
-                    <input type="text" id="emailField" name="emailField" required placeholder="Digite seu email aqui">
-                    <button type="button" class="btn btn-success">Cadastre-se</button>
+            </div>
+            <div class="row">
+                <div class="col-md-3 offset-3">
+                    <form class="form">
+                        <div class="d-flex flex-column">
+                            <input id="newsletter1" type="text" class="form-control formCadastrar" placeholder="Digite aqui seu email">
+                            <button class="btn btn-primary btnCadastrar" type="button">Cadastre-se > </button>
+                        </div>
+                    </form>
                 </div>
-                <div class="col-md-4 about"></div>
+                <div class="col-md-2 offset-1">
+                    <p>Dúvidas? Ligue 4002-8922</p>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Equipe</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Fale Conosco</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Termos de Uso</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-
     </footer>
-
     <!-- Optional JavaScript -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="./assets/js/main.js"></script>
     <script src="./assets/js/teste.js"></script>
 
-
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
