testando o js do modal pra pegar filmes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <section id="intro">
 
             <div>
-                <h1 data-bs-toggle="modal" data-bs-target="#filmeModalHome">Filmes ruins para <br> pessoas com gosto duvidoso!</h1>
+                <h1  id="testeModal" data-bs-toggle="modal" data-bs-target="#filmeModalHome">Filmes ruins para <br> pessoas com gosto duvidoso!</h1>
                 <p>Assista quando quiser e cancele a qualquer hora!</p>
 
                 <form id="formIntro">
@@ -76,7 +76,7 @@
         <div class="modal-dialog">
 
             <div class="modal-content">
-                <div class="modal-header">
+                <!-- <div class="modal-header">
 
                     <div id="filmeTituloModal">
                         <p>Vingadores: Endgame</p>
@@ -85,9 +85,9 @@
 
                     <button type="button"  data-bs-dismiss="modal" aria-label="Close">X</button>
 
-                </div>
+                </div> -->
 
-                <div class="modal-body">
+                <!-- <div class="modal-body">
 
                     <div id="filmePosterModal">
                         <img src="https://m.media-amazon.com/images/M/MV5BMTc5MDE2ODcwNV5BMl5BanBnXkFtZTgwMzI2NzQ2NzM@._V1_SX300.jpg" alt="Filme Poster">
@@ -137,7 +137,7 @@
 
                     </div>
 
-                </div>
+                </div> -->
 
                 <!-- <div class="modal-footer">
 
@@ -155,6 +155,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="./assets/js/main.js"></script>
   <script src="./assets/js/teste.js"></script>
+  <script src="./assets/js/testeCaio.js"></script>
 
 
   <!-- Bootstrap Bundle with Popper -->
