versao inicial recuperacao de senha

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body"><strong>É um serviço online que oferece uma ampla variedade de
                                 filmes trashes.</strong> Aqui você pesquisa e encontra todas as informações sobre os
-                            melhores (ou piores) filmes que você vai assistir na vida.</div>
+                            melhores (ou piores) filmes que você vai assistir na vida</div>
                     </div>
                 </div>
                 <div class="accordion-item">
@@ -108,25 +108,24 @@
                         aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body"><strong>Escondido, de preferência.</strong> Nem todo mundo está
                             preparado para apreciar essas obras-primas e você pode sofrer olhares julgadores. Pegue
-                            muita pipoca e refri para ser completa a sua experiência de guilt plesure.<br> Ah, quanto a
+                            muita pipoca e refri para a sua experiência de guilty pleasure ser completa &#127871; <br> E quanto a
                             telas, é compatível com todas.</div>
                     </div>
                 </div>
-                <div class="accordion accordion-flush" id="accordionFlushExample">
+               <!--<div class="accordion accordion-flush" id="accordionFlushExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingOne">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#flush-collapseFour" aria-expanded="false"
                                 aria-controls="flush-collapseFour">
-                                Como faço pra cancelar?
+                                Como faço para cancelar?
                             </button>
                         </h2>
                         <div id="flush-collapseFour" class="accordion-collapse collapse"
                             aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body"><strong>Basta BLABLABLA</strong> Mas lembre-se, o que foi visto
-                                não pode ser desvisto.</div>
+                            <div class="accordion-body"><strong>Basta <a href="#" target="_blank">clicar nesse link.</a></strong> Mas lembre-se, o que foi visto não pode ser desvisto</div>
                         </div>
-                    </div>
+                    </div> --> 
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingTwo">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -137,9 +136,8 @@
                         </h2>
                         <div id="flush-collapseFive" class="accordion-collapse collapse"
                             aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body"><strong>Os principais filmes trashes,</strong> muito sangue
-                                falso,
-                                efeitos especiais de gosto duvidoso, roteiros viajantes e algumas atuações canastronas.
+                            <div class="accordion-body"><strong>Os principais filmes trashes,</strong> dos clássicos aos mais recentes, muito sangue
+                                falso, efeitos especiais de gosto duvidoso, roteiros viajantes e algumas atuações canastronas
                             </div>
                         </div>
                     </div>
@@ -153,9 +151,7 @@
                         </h2>
                         <div id="flush-collapseSix" class="accordion-collapse collapse"
                             aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body"><strong>Não. Ou é.</strong> Não somos a polícia da classificação
-                                etária e certamente também não vamos pagar terapia para ninguém.<br> Aviso: você foi
-                                avisado.</div>
+                            <div class="accordion-body"><strong>Sangue, violência, sobrenatural...</strong> <br>Você está mesmo querendo saber se o conteúdo é adequado para crianças?</div>
                         </div>
                     </div>
                 </div>
