mudança dos Data-title

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
           <div class="carousel-item">
             <div class="carouselFilmes">
-              <div class="foto"> <img data-title="cinederela" src="./assets/img/bg/Cinderela-Baiana.jpg" alt="...">
+              <div class="foto"> <img data-title="cinderela" src="./assets/img/bg/Cinderela-Baiana.jpg" alt="...">
               </div>
               <div id="filmeInfo">
                 <h2>title</h2>
@@ -278,7 +278,7 @@
 
           <div class="carousel-item">
           <div class="carouselFilmes">
-            <div class="foto"><img class="foto" data-title="tomate" src="./assets/img/bg/A-Camisinha-Assassina-1996-5.jpg"
+            <div class="foto"><img class="foto" data-title="camisinha" src="./assets/img/bg/A-Camisinha-Assassina-1996-5.jpg"
                 alt="..."></div>
             <div id="filmeInfo">
               <h2>title</h2>
@@ -290,7 +290,7 @@
 
         <div class="carousel-item">
           <div class="carouselFilmes">
-            <div class="foto"><img class="foto" data-title="tomate" src="./assets/img/bg/Dragon-Ball-Evolution-Piccolo-Goku.jpg"
+            <div class="foto"><img class="foto" data-title="dragonBall" src="./assets/img/bg/Dragon-Ball-Evolution-Piccolo-Goku.jpg"
                 alt="..."></div>
             <div id="filmeInfo">
               <h2>title</h2>
