--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
         <section id="intro">
 
         <div>
-            <h1 id="testeModal" data-bs-toggle="modal" data-bs-target="#filmeModalHome">Filmes ruins para <br> pessoas com gosto duvidoso!</h1>
+            <h1 id="testeModal" data-title="Kondom des Grauens" data-bs-toggle="modal" data-bs-target="#filmeModalHome">Filmes ruins para <br> pessoas com gosto duvidoso!</h1>
             <p>Assista quando quiser e cancele a qualquer hora!</p>
 
             <form id="formIntro">
 
-            <p>Gostou ? Digite abaixo seu email para iniciar ou renovar sua assinatura.</p>
+                <p>Gostou ? Digite abaixo seu email para iniciar ou renovar sua assinatura.</p>
 
-            <fieldset>
-                <input type="text" id="emailField" name="emailField" required placeholder="Digite seu email aqui">
-                <button onclick="cadastrar()" class="btnCadastrar">Cadastre-se</button>
-            </fieldset>
+                <fieldset>
+                    <input type="text" id="emailField" name="emailField" required placeholder="Digite seu email aqui">
+                    <button onclick="cadastrar()" class="btnCadastrar">Cadastre-se</button>
+                </fieldset>
 
             </form>
         </div>
@@ -270,7 +270,7 @@
 
             <div class="carousel-item">
             <div class="carouselFilmes">
-                <div class="foto"><img class="foto" data-title="tomate" src="./assets/img/bg/A-Camisinha-Assassina-1996-5.jpg"
+                <div class="foto"><img class="foto" data-title="Camisinha" src="./assets/img/bg/A-Camisinha-Assassina-1996-5.jpg"
                     alt="..."></div>
                 <div id="filmeInfo">
                 <h2>title</h2>
@@ -282,7 +282,7 @@
 
             <div class="carousel-item">
             <div class="carouselFilmes">
-                <div class="foto"><img class="foto" data-title="tomate" src="./assets/img/bg/Dragon-Ball-Evolution-Piccolo-Goku.jpg"
+                <div class="foto"><img class="foto" data-title="Dragon Ball" src="./assets/img/bg/Dragon-Ball-Evolution-Piccolo-Goku.jpg"
                     alt="..."></div>
                 <div id="filmeInfo">
                 <h2>title</h2>
@@ -434,7 +434,25 @@
         <div class="modal-dialog">
 
             <div class="modal-content">
-                
+                <div class="modal-header"></div>
+
+                <div class="modal-body">
+
+                    <div id="filmePosterModal"></div>
+
+                    <div id="filmeInfoModal">
+
+                        <div id="filmeNotaModal"></div>
+
+                        <div id="filmeSinopseModal"></div>
+
+                        <hr>
+
+                        <div id="outrosFilmeModal"></div>
+
+                    </div>
+
+                </div>
             </div>
 
         </div>
