adionado o validarEmail no main.js e melhorado o js do modal

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                 <fieldset>
                     <input type="text" id="emailField" name="emailField" required placeholder="Digite seu email aqui">
-                    <button onclick="cadastrar()" class="btnCadastrar">Cadastre-se</button>
+                    <button onclick="homeCadastrarBtn()" class="btnCadastrar">Cadastre-se</button>
                 </fieldset>
 
             </form>
@@ -282,7 +282,7 @@
 
             <div class="carousel-item">
             <div class="carouselFilmes">
-                <div class="foto"><img class="foto" data-title="Dragon Ball" src="./assets/img/bg/Dragon-Ball-Evolution-Piccolo-Goku.jpg"
+                <div class="foto"><img class="foto" data-title="Dragon yBall" src="./assets/img/bg/Dragon-Ball-Evolution-Piccolo-Goku.jpg"
                     alt="..."></div>
                 <div id="filmeInfo">
                 <h2>title</h2>
@@ -463,6 +463,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="./assets/js/main.js"></script>
+  <script src="./assets/js/modal.js"></script>
   <script src="./assets/js/teste.js"></script>
   <script src="./assets/js/testeCaio.js"></script>
 
