--- a/assets/pages/pesquisaFilmes.html
+++ b/assets/pages/pesquisaFilmes.html
@@ -32,7 +32,7 @@
 
     <div id="listaDeFilmes">
      <ul id="lista">
-        <li><img src= "https://m.media-amazon.com/images/M/MV5BMTEzNjkwMzIyMjZeQTJeQWpwZ15BbWU4MDI2NTU5ODYx._V1_SX300.jpg"></li>
+        <!-- <li><img src= "https://m.media-amazon.com/images/M/MV5BMTEzNjkwMzIyMjZeQTJeQWpwZ15BbWU4MDI2NTU5ODYx._V1_SX300.jpg"></li>
          <li><img src="https://m.media-amazon.com/images/M/MV5BMTYzNDM0ODQxMF5BMl5BanBnXkFtZTcwOTMyMzMzMg@@._V1_SX300.jpg"></li> 
          <li><img src="https://m.media-amazon.com/images/M/MV5BMTUwOTgzMTEyOF5BMl5BanBnXkFtZTgwNTk3MTM5MjI@._V1_SX300.jpg"></li>
          <li><img src="https://m.media-amazon.com/images/M/MV5BZTJiZjFkNmYtNmU3My00MmE1LWI4YWEtNWFkZDJiOTgwMTNkXkEyXkFqcGdeQXVyMTg0MTI3Mg@@._V1_SX300.jpg"></li>
@@ -44,16 +44,21 @@
          <li><img src=""></li>
          <li><img src=""></li>
          <li><img src=""></li>
-         <li><img src=""></li>
+         <li><img src=""></li> -->
 
     </ul> 
 </div>
 </div>
-<script src="../js/teste.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"integrity="sha256-/xU+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+<!-- <script src="../js/teste.js"></script> -->
+<script src="../src/model/model.js"></script>
+<script src="../src/controller/controller.js"></script>
+<script src="../src/view/view.js"></script>
 
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
