--- a/assets/pages/pesquisaFilmes.html
+++ b/assets/pages/pesquisaFilmes.html
@@ -50,7 +50,8 @@
 </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"integrity="sha256-/xU+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
 
 <!-- <script src="../js/teste.js"></script> -->
 <script src="../src/model/model.js"></script>
