--- a/index.html
+++ b/index.html
@@ -480,8 +480,7 @@
     </div>
 
   <!-- Optional JavaScript -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="./assets/js/main.js"></script>
   <script src="./assets/js/modal.js"></script>
   <script src="./assets/js/teste.js"></script>
