mudado o async de true pra false no controller

--- a/assets/pages/pesquisaFilmes.html
+++ b/assets/pages/pesquisaFilmes.html
@@ -27,27 +27,27 @@
 
     <div id="barra">
         <input type="text" id="pesqFilmes" name="pesquesaFilmes" placeholder="Pesquise o seu filme aqui">
-        <button >pesquisar</button>
+        <button id="btnPesq">pesquisar</button>
     </div>
 
     <div id="listaDeFilmes">
-     <ul id="lista">
-        <!-- <li><img src= "https://m.media-amazon.com/images/M/MV5BMTEzNjkwMzIyMjZeQTJeQWpwZ15BbWU4MDI2NTU5ODYx._V1_SX300.jpg"></li>
-         <li><img src="https://m.media-amazon.com/images/M/MV5BMTYzNDM0ODQxMF5BMl5BanBnXkFtZTcwOTMyMzMzMg@@._V1_SX300.jpg"></li> 
-         <li><img src="https://m.media-amazon.com/images/M/MV5BMTUwOTgzMTEyOF5BMl5BanBnXkFtZTgwNTk3MTM5MjI@._V1_SX300.jpg"></li>
-         <li><img src="https://m.media-amazon.com/images/M/MV5BZTJiZjFkNmYtNmU3My00MmE1LWI4YWEtNWFkZDJiOTgwMTNkXkEyXkFqcGdeQXVyMTg0MTI3Mg@@._V1_SX300.jpg"></li>
-         <li><img src=""></li>
-         <li><img src=""></li>
-         <li><img src=""></li>
-         <li><img src=""></li>
-         <li><img src=""></li>
-         <li><img src=""></li>
-         <li><img src=""></li>
-         <li><img src=""></li>
-         <li><img src=""></li> -->
+        <ul id="lista">
+            <!-- <li><img src= "https://m.media-amazon.com/images/M/MV5BMTEzNjkwMzIyMjZeQTJeQWpwZ15BbWU4MDI2NTU5ODYx._V1_SX300.jpg"></li>
+            <li><img src="https://m.media-amazon.com/images/M/MV5BMTYzNDM0ODQxMF5BMl5BanBnXkFtZTcwOTMyMzMzMg@@._V1_SX300.jpg"></li> 
+            <li><img src="https://m.media-amazon.com/images/M/MV5BMTUwOTgzMTEyOF5BMl5BanBnXkFtZTgwNTk3MTM5MjI@._V1_SX300.jpg"></li>
+            <li><img src="https://m.media-amazon.com/images/M/MV5BZTJiZjFkNmYtNmU3My00MmE1LWI4YWEtNWFkZDJiOTgwMTNkXkEyXkFqcGdeQXVyMTg0MTI3Mg@@._V1_SX300.jpg"></li>
+            <li><img src=""></li>
+            <li><img src=""></li>
+            <li><img src=""></li>
+            <li><img src=""></li>
+            <li><img src=""></li>
+            <li><img src=""></li>
+            <li><img src=""></li>
+            <li><img src=""></li>
+            <li><img src=""></li> -->
 
-    </ul> 
-</div>
+        </ul> 
+    </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
