estilo do carousel

--- a/index.html
+++ b/index.html
@@ -95,21 +95,25 @@
                 <div class="carouselFilmes">
                 <div class="foto"><img data-title="velocipastor" src="./assets/img/bg/velocipastor.jpg" alt="..."></div>
                 <div id="filmeInfo">
-                    <h2>title</h2>
+                    <h2>The velocipastor</h2>
                     <h3>Sinopse</h3>
-                    <button type=submit>Click-me</button>
+                    <div class ="botao">
+                        <button type=submit>veja mais >></button>
+                    </div>
                 </div>
                 </div>
             </div>
 
             <div class="carousel-item">
                 <div class="carouselFilmes">
-                <div class="foto"> <img data-title="cinederela" src="./assets/img/bg/Cinderela-Baiana.jpg" alt="...">
+                <div class="foto"> <img data-title="cinderela" src="./assets/img/bg/Cinderela-Baiana.jpg" alt="...">
                 </div>
                 <div id="filmeInfo">
-                    <h2>title</h2>
+                    <h2> Cinderela Baiana </h2>
                     <h3>Sinopse</h3>
-                    <button type=submit>Click-me</button>
+                    <div class ="botao">
+                    <button type=submit>veja mais >></button>
+                </div>
                 </div>
                 </div>
             </div>
@@ -119,9 +123,11 @@
                 <div class="carouselFilmes">
                 <div class='foto'> <img data-title="Death_Note" src="./assets/img/bg/death-note.jpg" alt="..."></div>
                 <div id="filmeInfo">
-                    <h2>title</h2>
+                    <h2>Death Note</h2>
                     <h3>Sinopse</h3>
-                    <button type=submit>Click-me</button>
+                    <div class ="botao">
+                        <button type=submit>veja mais >></button>
+                    </div>
                 </div>
                 </div>
             </div>
@@ -131,9 +137,11 @@
                 <div class="foto"> <img data-title="pink_flamingos" src="./assets/img/bg/pink flamingos.jfif" alt="...">
                 </div>
                 <div id="filmeInfo">
-                    <h2>title</h2>
+                    <h2>Pink flamingos</h2>
                     <h3>Sinopse</h3>
-                    <button type=submit>Click-me</button>
+                    <div class ="botao">
+                        <button type=submit>veja mais >></button>
+                    </div>
                 </div>
                 </div>
             </div>
@@ -142,9 +150,11 @@
                 <div class="carouselFilmes">
                 <div class="foto"><img data-title="slenderMan" src="./assets/img/bg/slender-m,an.png" alt="..."></div>
                 <div id="filmeInfo">
-                    <h2>title</h2>
+                    <h2>Slender man </h2>
                     <h3>Sinopse</h3>
-                    <button type=submit>Click-me</button>
+                    <div class ="botao">
+                        <button type=submit>veja mais >></button>
+                    </div>
                 </div>
                 </div>
             </div>       
@@ -154,9 +164,11 @@
                 <div class="foto"><img data-title="centopeiaHumana" src="./assets/img/bg/centoeia humana.jpg" alt="...">
                 </div>
                 <div id="filmeInfo">
-                    <h2>title</h2>
+                    <h2> human centipede</h2>
                     <h3>Sinopse</h3>
-                    <button type=submit>Click-me</button>
+                    <div class ="botao">
+                        <button type=submit>veja mais >></button>
+                    </div>
                 </div>
 
                 </div>
@@ -166,9 +178,11 @@
                 <div class="carouselFilmes">
                 <div class="foto"><img data-title="rubber" src="./assets/img/bg/pneu assassino.jfif" alt="..."></div>
                 <div id="filmeInfo">
-                    <h2>title</h2>
+                    <h2>Pneu assassino</h2>
                     <h3>Sinopse</h3>
-                    <button type=submit>Click-me</button>
+                    <div class ="botao">
+                        <button type=submit>veja mais >></button>
+                    </div>
                 </div>
                 </div>
             </div>
@@ -178,9 +192,11 @@
                 <div class="foto"><img data-title="malditasAranha" src="./assets/img/bg/Malditas-Aranhas.jpg" alt="...">
                 </div>
                 <div id="filmeInfo">
-                <h2>title</h2>
+                <h2>damn spiders</h2>
                 <h3>Sinopse</h3>
-                <button type=submit>Click-me</button>
+                <div class ="botao">
+                    <button type=submit>veja mais >></button>
+                </div>
                 </div>
             </div>
             </div>
@@ -189,9 +205,11 @@
             <div class="carouselFilmes">
                 <div class="foto"><img data-title="theEvil" src="./assets/img/bg/evil-dead.jpg" alt="..."></div>
                 <div id="filmeInfo">
-                <h2>title</h2>
+                <h2>The evil dead</h2>
                 <h3>Sinopse</h3>
-                <button type=submit>Click-me</button>
+                <div class ="botao">
+                    <button type=submit>veja mais >></button>
+                </div>
                 </div>
             </div>
             </div>
@@ -201,10 +219,11 @@
             <div class="carouselFilmes">
                 <div class="foto"><img data-title="teeth" src="./assets/img/bg/teethh.jpg" alt="..."></div>
                 <div id="filmeInfo">
-                <h2>title</h2>
+                <h2>Teeth</h2>
                 <h3>Sinopse</h3>
-                <button type=submit>Click-me</button>
-
+                <div class ="botao">
+                    <button type=submit>veja mais >></button>
+                </div>
                 </div>
             </div>
             </div>
@@ -213,9 +232,11 @@
             <div class="carouselFilmes">
                 <div class="foto"><img data-title="rosquinha" src="./assets/img/bg/rosquina assassina.jfif" alt="..."></div>
                 <div id="filmeInfo">
-                <h2>title</h2>
+                <h2>killer donut</h2>
                 <h3>Sinopse</h3>
-                <button type=submit>Click-me</button>
+                <div class ="botao">
+                    <button type=submit>veja mais >></button>
+                </div>
                 </div>
             </div>
             </div>
@@ -225,9 +246,11 @@
                 <div class="foto"> <img class="foto" data-title="sharnado" src="./assets/img/bg/sharknado.jpg"
                     class="d-block w-100" alt="..."></div>
                 <div id="filmeInfo">
-                <h2>title</h2>
+                <h2>Sharknado</h2>
                 <h3>Sinopse</h3>
-                <button type=submit>Click-me</button>
+                <div class ="botao">
+                    <button type=submit>veja mais >></button>
+                </div>
                 </div>
             </div>
             </div>
@@ -238,9 +261,11 @@
                     src="./assets/img/bg/Esta noite encarnerei no teu cadaver.jpg" alt="...">
                 </div>
                 <div id="filmeInfo">
-                <h2>title</h2>
+                <h2>Tonight I will incarnate in your corpse</h2>
                 <h3>Sinopse</h3>
-                <button type=submit>Click-me</button>
+                <div class ="botao">
+                    <button type=submit>veja mais >></button>
+                </div>
                 </div>
             </div>
             </div>
@@ -249,9 +274,11 @@
             <div class="carouselFilmes">
                 <div class="foto"><img class="foto" data-title="tremors" src="./assets/img/bg/Tremors.jpeg" alt="..."></div>
                 <div id="filmeInfo">
-                <h2>title</h2>
+                <h2>Tremors</h2>
                 <h3>Sinopse</h3>
-                <button type=submit>Click-me</button>
+                <div class ="botao">
+                    <button type=submit>veja mais >></button>
+                </div>
                 </div>
             </div>
             </div>
@@ -261,33 +288,39 @@
                 <div class="foto"><img class="foto" data-title="tomate" src="./assets/img/bg/tomate assassino.jfif"
                     alt="..."></div>
                 <div id="filmeInfo">
-                <h2>title</h2>
+                <h2>killer tomatoes</h2>
                 <h3>Sinopse</h3>
-                <button type=submit>Click-me</button>
+                <div class ="botao">
+                    <button type=submit>veja mais >></button>
+                </div>
                 </div>
             </div>
             </div>
 
             <div class="carousel-item">
             <div class="carouselFilmes">
-                <div class="foto"><img class="foto" data-title="tomate" src="./assets/img/bg/A-Camisinha-Assassina-1996-5.jpg"
+                <div class="foto"><img class="foto" data-title="condom" src="./assets/img/bg/A-Camisinha-Assassina-1996-5.jpg"
                     alt="..."></div>
                 <div id="filmeInfo">
-                <h2>title</h2>
+                <h2>killeres condoms</h2>
                 <h3>Sinopse</h3>
-                <button type=submit>Click-me</button>
+                <div class ="botao">
+                    <button type=submit>veja mais >></button>
+                </div>
                 </div>
             </div>
             </div>
 
             <div class="carousel-item">
             <div class="carouselFilmes">
-                <div class="foto"><img class="foto" data-title="tomate" src="./assets/img/bg/Dragon-Ball-Evolution-Piccolo-Goku.jpg"
+                <div class="foto"><img class="foto" data-title="Dragonball" src="./assets/img/bg/Dragon-Ball-Evolution-Piccolo-Goku.jpg"
                     alt="..."></div>
                 <div id="filmeInfo">
-                <h2>title</h2>
+                <h2> Dragon Ball Evolution</h2>
                 <h3>Sinopse</h3>
-                <button type=submit>Click-me</button>
+                <div class ="botao">
+                    <button type=submit>veja mais >></button>
+                </div>
                 </div>
             </div>
             </div>
