--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                 <div id="filmeInfo">
                     <h2>The velocipastor</h2>
                     <h3>Sinopse</h3>
+                    <P> Após perder os pais, um padre viaja à China, onde herda uma habilidade misteriosa que o permite transformar-se em um dinossauro.(...)</P>
                     <div class ="botao">
                         <button type=submit>veja mais >></button>
                     </div>
@@ -111,6 +112,7 @@
                 <div id="filmeInfo">
                     <h2> Cinderela Baiana </h2>
                     <h3>Sinopse</h3>
+                    <p>Numa cidade da região metropolitana de Salvador, Bahia, vive uma família humilde. Em busca de melhores condições de vida, Raimundo se muda para a capital, pois arrumou um emprego perto do Pelourinho que pode ajudá-lo a cuidar melhor de sua esposa e filhos.(...)</p>
                     <div class ="botao">
                     <button type=submit>veja mais >></button>
                 </div>
@@ -125,6 +127,7 @@
                 <div id="filmeInfo">
                     <h2>Death Note</h2>
                     <h3>Sinopse</h3>
+                    <p>Seattle, Estados Unidos. Light Turner  é um estudante brilhante que, um dia, encontra um caderno que repentinamente cai do céu.(...)</p>
                     <div class ="botao">
                         <button type=submit>veja mais >></button>
                     </div>
@@ -139,6 +142,7 @@
                 <div id="filmeInfo">
                     <h2>Pink flamingos</h2>
                     <h3>Sinopse</h3>
+                    <p>Divine, seu louco filho hippie Crackers  e sua obesa mãe ostentam honrosa e orgulhosamente o título de "pessoas mais imundas do mundo".(...)</p>
                     <div class ="botao">
                         <button type=submit>veja mais >></button>
                     </div>
@@ -152,6 +156,7 @@
                 <div id="filmeInfo">
                     <h2>Slender man </h2>
                     <h3>Sinopse</h3>
+                    <p>As amigas Wren, Hallie, Chloe e Katie levam uma vida entediante no colégio. Quando ouvem falar num monstro chamado Slender Man.(...)</p>
                     <div class ="botao">
                         <button type=submit>veja mais >></button>
                     </div>
@@ -166,6 +171,7 @@
                 <div id="filmeInfo">
                     <h2> human centipede</h2>
                     <h3>Sinopse</h3>
+                    <p>Duas jovens americanas, que estão em viagem pela Europa, encontram-se com o carro quebrado à noite numa floresta deserta da Alemanha. Elas andam pelo local em busca de ajuda quando encontram uma cidadezinha isolada.(...)</p>
                     <div class ="botao">
                         <button type=submit>veja mais >></button>
                     </div>
@@ -180,6 +186,7 @@
                 <div id="filmeInfo">
                     <h2>Pneu assassino</h2>
                     <h3>Sinopse</h3>
+                    <p>Em pleno deserto californiano, um pneu com poderes telepáticos acorda subitamente e começa a assassinar todos os seres vivos que encontra pela frente.(...)</p>
                     <div class ="botao">
                         <button type=submit>veja mais >></button>
                     </div>
@@ -194,6 +201,7 @@
                 <div id="filmeInfo">
                 <h2>damn spiders</h2>
                 <h3>Sinopse</h3>
+                <p>Após um acidente tóxico ter ocorrido próximo de uma pequena cidade do interior dos Estados Unidos, várias aranhas venenosas são expostas à radiação e crescem em proporções monstruosas, ameaçando toda a população local.(...)</p>
                 <div class ="botao">
                     <button type=submit>veja mais >></button>
                 </div>
@@ -207,6 +215,7 @@
                 <div id="filmeInfo">
                 <h2>The evil dead</h2>
                 <h3>Sinopse</h3>
+                <p>Cinco estudantes da Universidade de Michigan decidem passar um final de semana em uma casa isolada. Lá eles encontram o livro dos mortos, um documento que data da época da Babilônia e que está relacionado ao livro dos mortos egípcio.(...)</p>
                 <div class ="botao">
                     <button type=submit>veja mais >></button>
                 </div>
@@ -221,6 +230,7 @@
                 <div id="filmeInfo">
                 <h2>Teeth</h2>
                 <h3>Sinopse</h3>
+                <p>Dawn é uma aluna do colegial, que mora perto de uma usina nuclear. Ela está apaixonada por Tobey, um colega da escola, e tem uma grande atração física por ele, mas tem a intenção de permanecer virgem até o casamento.(...)</p>
                 <div class ="botao">
                     <button type=submit>veja mais >></button>
                 </div>
@@ -234,6 +244,7 @@
                 <div id="filmeInfo">
                 <h2>killer donut</h2>
                 <h3>Sinopse</h3>
+                <p>Luther é um esquisito cientista que quer entrar para a história, mas um acidente químico em seu laboratório transforma donuts comuns em assassinos sedentos por sangue.(...)</p>
                 <div class ="botao">
                     <button type=submit>veja mais >></button>
                 </div>
@@ -248,6 +259,7 @@
                 <div id="filmeInfo">
                 <h2>Sharknado</h2>
                 <h3>Sinopse</h3>
+                <p>Uma grande tornado surge no litoral da Califórnia... O fenômeno natural começa no mar e interfere na vida de milhares de tubarões, que são sugados do oceano e arremessados por toda Los Angeles.(...)</p>
                 <div class ="botao">
                     <button type=submit>veja mais >></button>
                 </div>
@@ -263,6 +275,7 @@
                 <div id="filmeInfo">
                 <h2>Tonight I will incarnate in your corpse</h2>
                 <h3>Sinopse</h3>
+                <p>as maldades de Zé do Caixão se tornam cada vez mais sádicas.(...)</p>
                 <div class ="botao">
                     <button type=submit>veja mais >></button>
                 </div>
@@ -276,8 +289,9 @@
                 <div id="filmeInfo">
                 <h2>Tremors</h2>
                 <h3>Sinopse</h3>
+                <p>Perfection é uma pequena vila isolada no meio do estado de Nevada onde, indo de encontro à calmaria costumeira, passa a sofrer uma série de abalos sísmicos estranhos.</p>
                 <div class ="botao">
-                    <button type=submit>veja mais >></button>
+                    <button type=submit>Veja mais >></button>
                 </div>
                 </div>
             </div>
@@ -290,6 +304,7 @@
                 <div id="filmeInfo">
                 <h2>killer tomatoes</h2>
                 <h3>Sinopse</h3>
+                <p>A situação está saindo do controle em uma área experimental do departamento de agricultura, e tomates estão atacando as pessoas.</p>
                 <div class ="botao">
                     <button type=submit>veja mais >></button>
                 </div>
@@ -304,6 +319,7 @@
                 <div id="filmeInfo">
                 <h2>killeres condoms</h2>
                 <h3>Sinopse</h3>
+                <p></p>
                 <div class ="botao">
                     <button type=submit>veja mais >></button>
                 </div>
@@ -318,6 +334,7 @@
                 <div id="filmeInfo">
                 <h2> Dragon Ball Evolution</h2>
                 <h3>Sinopse</h3>
+                <p>O jovem guerreiro Son Goku parte em uma missão, correndo contra o tempo e o vingativo Rei Piccolo.(...)</p>
                 <div class ="botao">
                     <button type=submit>veja mais >></button>
                 </div>
