footer da pg pesquisa

--- a/index.html
+++ b/index.html
@@ -468,9 +468,12 @@
                 <div class="col-md-2 offset-1">
                     <p>Dúvidas? Ligue 4002-8922</p>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Equipe</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Fale Conosco</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Termos de Uso</a></li>
+                        <li class="nav-item mb-2"><a href="./assets/pages/equipe.html" class="nav-link p-0">Equipe</a>
+                        </li>
+                        <li class="nav-item mb-2"><a
+                                href="http://comercial.recordtv.com.br/programacao-nacional/fala-que-eu-te-escuto/" target="_blank"
+                                class="nav-link p-0">Fale Conosco</a></li>
+                        <li class="nav-item mb-2"><a href="https://help.netflix.com/pt/legal/termsofuse/" target="_blank" class="nav-link p-0">Termos de Uso</a></li>
                     </ul>
                 </div>
           </div>
