--- a/assets/pages/pesquisaFilmes.html
+++ b/assets/pages/pesquisaFilmes.html
@@ -49,6 +49,23 @@
     </ul> 
 </div>
 </div>
+
+ <div id ="footer">
+<footer>
+
+    <p>Duvidas? Ligue: 4002-8922</p>
+
+    <ul class="nav flex-column">
+        <li class="nav-item mb-2"><a href="./equipe.html" class="nav-link p-0">Equipe</a>
+        </li>
+        <li class="nav-item mb-2"><a
+                href="http://comercial.recordtv.com.br/programacao-nacional/fala-que-eu-te-escuto/" target="_blank"
+                class="nav-link p-0">Fale Conosco</a></li>
+        <li class="nav-item mb-2"><a href="https://help.netflix.com/pt/legal/termsofuse/" target="_blank" class="nav-link p-0">Termos de Uso</a></li>
+    </ul>
+
+</footer>
+</div>
 <script src="../js/teste.js"></script>
 
 
