alteração font logo e ícones social media do team

--- a/assets/pages/cadastrarUsuario.html
+++ b/assets/pages/cadastrarUsuario.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
   <!-- BOOTSTRAP CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
@@ -111,12 +112,18 @@
     <p>Duvidas? Ligue: 4002-8922</p>
 
     <ul>
-        <li><a href="./equipe.html"><p>Equipe</p></a></li>
-        <li><a href="http://comercial.recordtv.com.br/programacao-nacional/fala-que-eu-te-escuto/" target="_blank"><p>Fale conosco</p></a></li>
-        <li><a href="https://help.netflix.com/pt/legal/termsofuse/"><p>Termos de uso</p></a></li>
+      <li><a href="./equipe.html">
+          <p>Equipe</p>
+        </a></li>
+      <li><a href="http://comercial.recordtv.com.br/programacao-nacional/fala-que-eu-te-escuto/" target="_blank">
+          <p>Fale conosco</p>
+        </a></li>
+      <li><a href="https://help.netflix.com/pt/legal/termsofuse/">
+          <p>Termos de uso</p>
+        </a></li>
     </ul>
 
-</footer>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -126,4 +133,5 @@
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
     crossorigin="anonymous"></script>
 </body>
+
 </html>
