--- a/assets/pages/recuperarSenha.html
+++ b/assets/pages/recuperarSenha.html
@@ -9,10 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 
 
-    <!-- BOOTSTRAP CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
-    
+    <!-- BOOTSTRAP CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+
     <!-- MY CSS -->
     <link rel="stylesheet" href="../css/components.css">
     <link rel="stylesheet" href="../css/recuperarSenha.css">
@@ -20,7 +22,7 @@
 </head>
 
 <body>
-    
+
     <header>
 
         <nav>
@@ -34,22 +36,23 @@
         <main>
             <div class="bg">
 
-            <h1>Esqueceu a senha?</h1>
-            <p>Perdeu o acesso a sua conta?</p>
+                <h1>Esqueceu a senha?</h1>
+                <p>Perdeu o acesso a sua conta?</p>
 
-            <form action="" id="formRecuperacao">
+                <form action="" id="formRecuperacao">
 
-                <div id="inputField">
-                    <label for="email">Digite seu e-mail para enviarmos as instruções de refediniçao de senha</label>
-                    <input type="email" id="email" name="email" placeholder="Digite seu email aqui"required>
-                </div>
+                    <div id="inputField">
+                        <label for="email">Digite seu e-mail para enviarmos as instruções de refediniçao de
+                            senha</label>
+                        <input type="email" id="email" name="email" placeholder="Digite seu email aqui" required>
+                    </div>
 
-                <button id="btnSubmit" onclick="validateEmail()">Enviar</button>
-            </form>
+                    <button id="btnSubmit" onclick="validateEmail()">Enviar</button>
+                </form>
 
-            <p>Não tem cadastro? Então clique <a href="./cadastrarUsuario.html">aqui</a>.</p> 
+                <p>Não tem cadastro? Então clique <a href="./cadastrarUsuario.html">aqui</a>.</p>
 
-        </div>
+            </div>
         </main>
 
     </div>
@@ -59,22 +62,31 @@
         <p>Duvidas? Ligue: 4002-8922</p>
 
         <ul>
-            <li><a href="./equipe.html"><p>Equipe</p></a></li>
-            <li><p>Fale conosco</p></li>
-            <li><p>Termos de uso</p></li>
+            <li><a href="./equipe.html">
+                    <p>Equipe</p>
+                </a></li>
+            <li>
+                <p>Fale conosco</p>
+            </li>
+            <li>
+                <p>Termos de uso</p>
+            </li>
         </ul>
 
     </footer>
 
     <!-- Optional JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="./assets/js/main.js"></script>
     <script src="./assets/js/teste.js"></script>
     <script src="../js/testeCaio.js"></script>
 
 
     <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
