--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-
+    
     <!-- BOOTSTRAP CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
@@ -50,9 +50,10 @@
 
         <section id="intro">
 
-        <div>
-            <h1 id="testeModal" data-title="Kondom des Grauens" data-bs-toggle="modal" data-bs-target="#filmeModalHome">Filmes ruins para <br> pessoas com gosto duvidoso!</h1>
-            <p>Assista quando quiser e cancele a qualquer hora!</p>
+            <div>
+                <h1 id="testeModal" data-title="Kondom des Grauens" data-bs-toggle="modal"
+                    data-bs-target="#filmeModalHome">Filmes ruins para <br> pessoas com gosto duvidoso!</h1>
+                <p>Assista quando quiser e cancele a qualquer hora!</p>
 
                 <form id="formIntro">
 
@@ -268,29 +269,29 @@
                         </div>
                     </div>
 
-            <div class="carousel-item">
-            <div class="carouselFilmes">
-                <div class="foto"><img class="foto" data-title="Camisinha" src="./assets/img/bg/A-Camisinha-Assassina-1996-5.jpg"
-                    alt="..."></div>
-                <div id="filmeInfo">
-                <h2>title</h2>
-                <h3>Sinopse</h3>
-                <button type=submit>Click-me</button>
-                </div>
-            </div>
-            </div>
+                    <div class="carousel-item">
+                        <div class="carouselFilmes">
+                            <div class="foto"><img class="foto" data-title="Camisinha"
+                                    src="./assets/img/bg/A-Camisinha-Assassina-1996-5.jpg" alt="..."></div>
+                            <div id="filmeInfo">
+                                <h2>title</h2>
+                                <h3>Sinopse</h3>
+                                <button type=submit>Click-me</button>
+                            </div>
+                        </div>
+                    </div>
 
-            <div class="carousel-item">
-            <div class="carouselFilmes">
-                <div class="foto"><img class="foto" data-title="Dragon Ball" src="./assets/img/bg/Dragon-Ball-Evolution-Piccolo-Goku.jpg"
-                    alt="..."></div>
-                <div id="filmeInfo">
-                <h2>title</h2>
-                <h3>Sinopse</h3>
-                <button type=submit>Click-me</button>
-                </div>
-            </div>
-            </div>
+                    <div class="carousel-item">
+                        <div class="carouselFilmes">
+                            <div class="foto"><img class="foto" data-title="Dragon Ball"
+                                    src="./assets/img/bg/Dragon-Ball-Evolution-Piccolo-Goku.jpg" alt="..."></div>
+                            <div id="filmeInfo">
+                                <h2>title</h2>
+                                <h3>Sinopse</h3>
+                                <button type=submit>Click-me</button>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="carousel-item">
                         <div class="carouselFilmes">
@@ -438,9 +439,10 @@
                         <li class="nav-item mb-2"><a href="./assets/pages/equipe.html" class="nav-link p-0">Equipe</a>
                         </li>
                         <li class="nav-item mb-2"><a
-                                href="http://comercial.recordtv.com.br/programacao-nacional/fala-que-eu-te-escuto/" target="_blank"
-                                class="nav-link p-0">Fale Conosco</a></li>
-                        <li class="nav-item mb-2"><a href="https://help.netflix.com/pt/legal/termsofuse/" target="_blank" class="nav-link p-0">Termos de Uso</a></li>
+                                href="http://comercial.recordtv.com.br/programacao-nacional/fala-que-eu-te-escuto/"
+                                target="_blank" class="nav-link p-0">Fale Conosco</a></li>
+                        <li class="nav-item mb-2"><a href="https://help.netflix.com/pt/legal/termsofuse/"
+                                target="_blank" class="nav-link p-0">Termos de Uso</a></li>
                     </ul>
                 </div>
             </div>
